<resources>
    <string name="app_name">The To Do List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="app_title">The To Do List</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up.</string>
    <string name="social_media_text">or sign in with</string>
    <string name="high_priority_image_description">High Priority Image</string>
    <string name="fab_content_description">Button to add a new task</string>
    <string name="action_search">Search</string>
    <string name="search_description">Search for task icon</string>
    <string name="settings_description">Settings Options</string>
    <string name="settings_title">App</string>
    <string name="profile_description">Profile Options</string>
    <string name="profile_title">Profile</string>
    <string name="search_hint_label">Search...</string>
    <string name="show_completed_text">Show Completed</string>
    <string name="hide_completed_text">Hide Completed</string>
    <string name="hint_task_title">Title</string>
    <string name="add_edit_priority_title">Priority</string>
    <string name="hint_task_description">Description</string>
    <string name="image_of_a_clock_description">Image of a clock.</string>
    <string name="save_or_update_button_content_description">Save or Update Button</string>
</resources>