<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:contentDescription="@string/search_description"
        android:icon="@drawable/ic_search_24"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:contentDescription="@string/settings_description"
        android:orderInCategory="102"
        android:title="@string/settings_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/profile"
        android:contentDescription="@string/profile_description"
        android:orderInCategory="101"
        android:title="@string/profile_title"
        app:showAsAction="never" />

</menu>